<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.example.gestalt.insulinpumpulator.MainPageActivity">

    <ScrollView
        android:id="@+id/pump_settings_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp">

        <LinearLayout
            android:id="@+id/responses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/audio_responses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audio_responses"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:id="@+id/record_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_record_response"/>

            <Button
                android:id="@+id/play_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_play_response"/>

            <Button
                android:id="@+id/save_audio_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_save_audio_response"/>

            <TextView
                android:id="@+id/text_responses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_responses"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="0dp"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_response"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_text_response"
                    android:inputType="text"
                    android:maxLines="100"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/save_text_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_save_text_response"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
