<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gestalt.insulinpumpulator.MainPageActivity"
    android:weightSum="1"
    android:columnCount="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:name="com.example.gestalt.insulinpumpulator.ScenarioSelectorFragment"
            android:id="@+id/scenarioSelectionFragment"
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <fragment
            android:name="com.example.gestalt.insulinpumpulator.AvatarSelectionFragment"
            android:id="@+id/avatarSelectionFragment"
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scenario_select"
            android:id="@+id/scenario_select"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_weight=".5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/connections"
            android:id="@+id/button2"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_weight=".5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/customization"
            android:id="@+id/button4"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_weight=".5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_information"
            android:id="@+id/button3"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_weight=".5" />



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight=".5">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/back"
                android:id="@+id/button6"
                android:layout_weight=".5"
                android:onClick="logout"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_send"
                android:id="@+id/button7"
                android:layout_gravity="right"
                android:layout_weight=".5" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
